Updated details for WOCHA experience. FIxed slider on extr-curricular page. Update Personal Project milestones

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                         
                         Work Experience<br></a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="coursework.html#header1-1k"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Selected Coursework<br></a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="my-projects.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
                         Personal Projects</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="extra-curr.html"><span class="mbri-features mbr-iconfont mbr-iconfont-btn"></span>
-                        Extra-curricular</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html#content5-24"><span class="mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>
+                        Extra-Curricular</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html#content5-24"><span class="mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>
                         Contact</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="assets/files/Funmi_Babalola_CV.pdf" target="_blank">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="header1 cid-rstkB3at0Y mbr-parallax-background" id="header1-z">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="header1 cid-rstkB3at0Y mbr-parallax-background" id="header1-z">
 
     
 
