--- a/my-projects.html
+++ b/my-projects.html
@@ -56,7 +56,7 @@
                         
                         Work Experience<br></a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="coursework.html#header1-1k"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Selected Coursework<br></a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="my-projects.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
                         Personal Projects</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="extra-curr.html"><span class="mbri-features mbr-iconfont mbr-iconfont-btn"></span>
-                        Extra-curricular</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html#content5-24"><span class="mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>
+                        Extra-Curricular</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html#content5-24"><span class="mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>
                         Contact</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="assets/files/Funmi_Babalola_CV.pdf" target="_blank">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="mbr-section content5 cid-rtKw42l06w mbr-parallax-background" id="content5-2j">
+<section class="engine"><a href="https://mobirise.info/e">make your own website</a></section><section class="mbr-section content5 cid-rtKw42l06w mbr-parallax-background" id="content5-2j">
 
     
 
@@ -234,7 +234,7 @@
         <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2"><strong>
             Timeline
         </strong></h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">Milestones completed during project</h3>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">Project Milestones</h3>
 
         <div class="container timelines-container" mbri-timelines="">
             <!--1-->
@@ -246,7 +246,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Obtained images of Adinkra symbols</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            I searched online for lists of all the symbols. I found some variations, and stuck with 4 sources. From this point, I began to create my image collection.</p>
+                            I searched online for lists of all the symbols. I found some variations, and stuck with 4 sources. From this point, I began to create my image collection.<br><br><strong>Status: Completed</strong></p>
                      </div>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Data Storage</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            I entered these images and their respective names and meanings into a <strong>[ TBD ]</strong>&nbsp; database.&nbsp;</p>
+                            I entered these images and their respective names and meanings into a&nbsp;database.&nbsp;<br><br><strong>Status: Planning</strong><br></p>
                     </div>
                 </div>
             </div>
