--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                         
                         Work Experience<br></a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="coursework.html#header1-1k"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Selected Coursework<br></a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="my-projects.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
                         Personal Projects</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="extra-curr.html"><span class="mbri-features mbr-iconfont mbr-iconfont-btn"></span>
-                        Extra-curricular</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html#content5-24"><span class="mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>
+                        Extra-Curricular</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html#content5-24"><span class="mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>
                         Contact</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="assets/files/Funmi_Babalola_CV.pdf" target="_blank">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="mbr-section content5 cid-rsuwPpGNQK mbr-parallax-background" id="content5-24">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-rsuwPpGNQK mbr-parallax-background" id="content5-24">
 
     
 
@@ -102,7 +102,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rH1ehr8rXMvyK/3L+2D0CBPO/SMfFlObRu6SrniyTDqdbZ4HqnFfSi4yeq6LKrnWcb+NH99xSYJJVJNahosd2/zhvIyT/pLE5t2RNyj6+IekYQtZPf3HV8sPg5tfh0qQ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s859gMwNApcF4yMfWAHq7Oam2ZTPBG/od4aQs4J55F+yCMr/0+uadB2MrWMiEkoYPM49fIac1mtQsTYV3y2h3dCTm3WeUaIbmPxErcS6vymP4jAtSL+fGvZNVt/ycP+q">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
