Uploaded Museum Walkthrough demo

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section form1 cid-rsuwt7xxyF" id="form1-23">
+<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section form1 cid-rsuwt7xxyF" id="form1-23">
 
     
 
@@ -63,7 +63,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ha12CythFpTmET3GyfhJg3jWZazEvWHENglBuQyNZCzHWUV0geAFD31VSRchZGiLQjuex5QAX0YFk/Y8nXyMoYwH1FQj98zYDGW2inw6XjClVoGbt5MWrkKs77apTu3+">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gkPpa8VYEfn4d3GR3nyWGkMhsOwyMDfMaGZSztDxZVo9DXewbkfMFANL7F0KF84Cfz/H2oaDqIdmJLjypQLzUvqh4ztVfkPwP8mHOwoYy0IP4xx2m5+lVqWFuDxpu3dY">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
