--- a/extra-curr.html
+++ b/extra-curr.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="carousel slide cid-rsuzx5rZgb" data-interval="false" id="slider1-25">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="carousel slide cid-rsuzx5rZgb" data-interval="false" id="slider1-25">
 
     
 
@@ -1203,7 +1203,7 @@
                         <span class="mbr-iconfont mbri-rocket" style="color: rgb(76, 26, 155); fill: rgb(76, 26, 155);"></span>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title py-3 mbr-fonts-style display-7"><div><strong>AALANA Collegiate Association (ACA) Phoenix Award</strong></div><div><strong><br></strong></div>An organization that has obtained new life and has set ablze to conquer the skies.<br><br><div><em>2013-14 Academic Year</em></div></h4>
+                        <h4 class="card-title py-3 mbr-fonts-style display-7"><div><strong>AALANA Collegiate Association (ACA) Phoenix Award</strong></div><div><strong><br></strong></div>An organization that has obtained new life and has set ablaze to conquer the skies.<br><br><div><em>2013-14 Academic Year</em></div></h4>
                         
                     </div>
                 </div>
