fix typo on about page, and other updates

--- a/work-xp.html
+++ b/work-xp.html
@@ -47,7 +47,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="menu cid-rrPrYeoHvX" once="menu" id="menu1-5">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="menu cid-rrPrYeoHvX" once="menu" id="menu1-5">
 
     
 
