Update Accenture end date

--- a/work-xp.html
+++ b/work-xp.html
@@ -498,7 +498,7 @@
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">
                     Accenture<br>Philadelphia, PA</h3>
                 <p class="mbr-text align-center mbr-white pb-3 mbr-fonts-style display-7">
-                    August 2018 - Present</p>
+                    August 2018 - October 2019</p>
                 
             </div>
         </div>
